--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
     <meta name="author" content="@ruhlanrzayev" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="todo list, simple todo, todo, html, css, javascript" />
-    <title>Simple to-do list 2</title>
+    <title>Simple to-do list</title>
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css" />
