--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
     <meta name="author" content="@ruhlanrzayev" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="todo list, simple todo, todo, html, css, javascript" />
-    <title>Simple to-do list</title>
+    <title>Simple to-do list 2</title>
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css" />
@@ -18,7 +18,7 @@
 </head>
 <body>
 
-    <div class="super-container">
+    <div class="super-container" id="superContainer">
         <div class="container">
             <div class="top-content">
                 <h1>My To-Do List</h1>
@@ -29,16 +29,7 @@
             </div>
             <div class="task-content" id="taskContent">
                 <div class="task-list" id="taskList">
-                    <!-- <div class="task">
-                        <div class="text-content">
-                            <input type="checkbox" />
-                            <span>Task 1</span>
-                        </div>
-                        <div class="icon-content">
-                            <i class="fa-solid fa-pen-to-square"></i>
-                            <i class="fa-solid fa-trash-can"></i>
-                        </div>
-                    </div> -->
+
                 </div>
             </div>
         </div>
