--- a/index.htm
+++ b/index.htm
@@ -32,7 +32,7 @@
         </div>
     </div>
 
-    <div class="alt-container">
+    <div id="alt-container">
         <div class="first-container">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum, unde facilis. Esse fugiat sunt natus
                 distinctio perferendis quibusdam eaque tempora optio! Eius dolores repellat voluptatem ipsa sapiente
